# chatexport

./: README.md  chatexport.py
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: app.ts  converter.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
